# hmatrix-mmap

./: LICENSE  README  hmatrix-mmap.cabal
Data/Packed/Vector/: MMap.hs
