Name:           hmatrix-mmap
Version:        0.0.1
License:        BSD3
License-File:   LICENSE
Author:         Daniel Peebles <pumpkingod@gmail.com>
Maintainer:     Daniel Peebles <pumpkingod@gmail.com>
Copyright:      (c) Daniel Peebles 2010
Homepage:       http://github.com/pumpkin/vector-mmap
Category:       Data, Data Structures
Synopsis:       Memory map immutable and mutable vectors
Description:
        Memory map immutable and mutable vectors.

Cabal-Version:  >= 1.2
Build-Type:     Simple

Library
  Exposed-Modules:
        Data.Packed.Vector.MMap

  Build-Depends: base >= 2 && < 5, mmap >= 0.5.4, hmatrix >= 0.10
